@@ -364,8 +364,6 @@ namespace KJS {
      * @return The return value from the function
      */
     bool implementsCall();
-    JSValue *call(ExecState *exec, JSObject *thisObj, const List &args);
-
     virtual JSValue *callAsFunction(ExecState *exec, JSObject *thisObj, const List &args);
 
     /**
