@@ -82,9 +82,9 @@ bool JSCustomSQLStatementErrorCallback::handleEvent(SQLTransaction* transaction,
     JSValue *result;
     globalObject->startTimeoutCheck();
     if (handleEventFunc)
-        result = handleEventFunc->call(exec, m_callback, args);
+        result = handleEventFunc->callAsFunction(exec, m_callback, args);
     else
-        result = m_callback->call(exec, m_callback, args);
+        result = m_callback->callAsFunction(exec, m_callback, args);
     globalObject->stopTimeoutCheck();
         
     if (exec->hadException()) {
