@@ -1,3 +1,11 @@
+2008-06-02  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+        
+        Removed JSObject::call, since it just called JSObject::callAsFunction.
+        
+        SunSpider reports no change.
+
 2008-06-02  Alp Toker  <alp@nuanti.com>
 
         Reviewed by Maciej.
